cmake_minimum_required(VERSION 3.8)
project(arm_kin)
set(CMAKE_CXX_STANDARD 11)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝ kdl_parser ๏ฟฝ๏ฟฝ orocos_kdl๏ฟฝ๏ฟฝ
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(std_msgs REQUIRED)
find_package(arm_interface REQUIRED)
find_package(kdl_parser REQUIRED)  # ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝ kdl_parser ๏ฟฝ๏ฟฝ
find_package(orocos_kdl REQUIRED)

# ๏ฟฝึถ๏ฟฝึธ๏ฟฝ๏ฟฝ ROS 2 ๏ฟฝ๏ฟฝยท๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝุผ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝๆปปฮช๏ฟฝ๏ฟฝ๏ฟฝ ROS 2 ๏ฟฝๆฑพยท๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝ
link_directories(/opt/ros/humble/lib)  # ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝ libkdl_parser.so ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝฤฟยผ

# อท๏ฟฝฤผ๏ฟฝยท๏ฟฝ๏ฟฝ
include_directories(
  include
  /usr/include/eigen3
  /opt/ros/humble/include  # ROS 2 อท๏ฟฝฤผ๏ฟฝยท๏ฟฝ๏ฟฝ
)

# ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝึด๏ฟฝ๏ฟฝ๏ฟฝฤผ๏ฟฝ
add_executable(kin_srv src/kin_srv.cpp src/fk_ik_kin.cpp)

# ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝ ROS 2 ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝ
ament_target_dependencies(kin_srv
  rclcpp
  std_msgs
  arm_interface
  kdl_parser
  orocos_kdl
)

# ๏ฟฝ๏ฟฝ๏ฟฝำฟโฃจ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝ kdl_parser ๏ฟฝ๏ฟฝ๏ฟฝิถ๏ฟฝ๏ฟฝ๏ฟฝโฃฉ
target_link_libraries(kin_srv
  orocos-kdl  # KDL ๏ฟฝ๏ฟฝ
  kdl_parser  # ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝาต๏ฟฝ libkdl_parser.so ๏ฟฝ๏ฟฝ
)

# ๏ฟฝ๏ฟฝืฐ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝ
target_include_directories(kin_srv PUBLIC
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
  $<INSTALL_INTERFACE:include>
)

install(
  DIRECTORY param
  DESTINATION share/${PROJECT_NAME}
)

install(TARGETS kin_srv
  DESTINATION lib/${PROJECT_NAME}
)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  set(ament_cmake_copyright_FOUND TRUE)
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()